Added fixes for audio and recording
This should
- Fix issues without audio cutting out if engine is minimized
- Fix issue where only the frist 5 seconds are outputed for the recorded files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,5 @@
-
+[Audio]
+UnfocusedVolumeMultiplier=1.0
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/simulation_level.simulation_level
